commit-index: make iterations/{id} always 404 (bug 1349250). r=davidwalsh,dkl
Since we don't have actual persistent iterations yet we'll start
this endpoint functionality with the 404 response.

MozReview-Commit-ID: E772qCNP63a

--HG--
extra : rebase_source : c339cc8cd1b4e042ece0abd57fa51da94774dc6a
